2006-01-13  Jim Meyering  <jim@meyering.net>

	* ls-mntd-fs.m4 (AC_FUNC_GETMNTENT): Invoke AC_CHECK_FUNCS(getmntent)
	unconditionally so that tests of $ac_cv_func_getmntent (e.g., in
	gl_LIST_MOUNTED_FILE_SYSTEMS) need not double-quote uses that variable,
	to accommodate the rare case in which getmntent is available in none
	of the libraries checked.  This happens at least on FreeBSD 5.0.

2006-01-11  Paul Eggert  <eggert@cs.ucla.edu>

	* prereq.m4 (gl_PREREQ): Require gl_STDINT_H.
	* stdint.m4: New file, from gnulib.

2006-01-11  Jim Meyering  <jim@meyering.net>

	* openat.m4 (gl_FUNC_OPENAT): Require and compile fchmodat.c.
	Check for the lchmod function.

2006-01-10  Paul Eggert  <eggert@cs.ucla.edu>

	* argmatch.m4 (gl_ARGMATCH): Don't require gl_FUNC_MEMCMP, for the
	sake of packages that don't want to worry about ancient systems.

	* getaddrinfo.m4, localcharset.m4, md5.m4, memcoll.m4:
	Sync from gnulib.

2006-01-10  Jim Meyering  <jim@meyering.net>

	* fpending.m4: Also include <stdio.h>, for Dragonfly.
	Patch by Joerg Sonnenberger.

2006-01-06  Paul Eggert  <eggert@cs.ucla.edu>

	* lib-ignore.m4: New file.

2006-01-01  Paul Eggert  <eggert@cs.ucla.edu>

	* chmod-safer.m4: Remove.
	* lchmod.m4: New file.
	* jm-macros.m4 (gl_MACROS): Require gl_FUNC_LCHMOD.
	Don't require gl_CHDIR_SAFER.

2005-12-21  Jim Meyering  <jim@meyering.net>

	* chdir-safer.m4: New file.
	* jm-macros.m4: Require gl_CHDIR_SAFER.

2005-12-05  Andreas Gruenbacher  <agruen@suse.de>

	* acl.m4 (AC_FUNC_ACL): Add POSIX ACL and Linux-specific acl tests.

2005-12-14  Jim Meyering  <jim@meyering.net>

	* fprintftime.m4: New file.
	* jm-macros.m4: Require gl_FPRINTFTIME.

2005-12-13  Paul Eggert  <eggert@cs.ucla.edu>

	* stdbool.m4 (AM_STDBOOL_H): Substitute HAVE__BOOL again, reverting
	2005-11-25 change.
	(AC_HEADER_STDBOOL): Check for buggy compiler that
	has _Bool but mishandles _Bool |= _Bool.

2005-12-07  Paul Eggert  <eggert@cs.ucla.edu>

	* stat-time.m4 (gl_STAT_TIME): Add check for